fix poor contrast ratio on line numbers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -185,6 +185,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --ec-lineNumbers-fg: var(--muted-foreground) !important;
   }
 
   .dark {
@@ -246,6 +247,9 @@
   * {
     scrollbar-width: thin;
     scrollbar-color: hsl(var(--border)) transparent;
+  }
+  .expressive-code .gutter .ln {
+    @apply text-muted/70! dark:text-foreground/70!;
   }
 }
 
